<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="app_name">messic</string>
    <string name="action_settings">Settings</string>

    <!-- SHARE -->
    <string name="share_album_text_start">I think you\'ll like this album</string>
    <string name="share_album_text_of">of</string>
    <string name="share_song_text_start">I think you\'ll like this song</string>
    <string name="share_song_text_album">at the album</string>
    <string name="share_song_text_of">of</string>
    <string name="share_subject">messic recomendation</string>
    <string name="share_by">Share via...</string>

    <string name="share_song">Share song</string>
    <string name="share_song_select">Select if you want to share the AUDIO Song, or just a recommendation TEXT</string>
    <string name="share_song_select_audio">Audio</string>
    <string name="share_song_select_text">Text</string>
    <string name="share_cancel">Cancel</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_remember">remember</string>
    <string name="login_loginhint">username</string>
    <string name="login_passwordhint">password</string>
    <string name="login_loginaction">Sign in</string>
    <string name="login_sonline">Online</string>
    <string name="login_server_offline">The last messic server doesn\'t seem to be online now. Press Search button to find another messic server in your network</string>
    <string name="login_explanation">Put here your login credentials to start playing your messic server online.</string>
    <string name="login_explanation_title">Login into messic service</string>

    <!-- SEARCH MESSIC SERVICE ACTIVITY -->
    <string name="searchMessicService_explanation_title">Search messic service</string>
    <string name="searchMessicService_explanation">You must search a valid messic service at your network. Press the button to start searching messic services in your network.</string>
    <string name="searchMessicService_searchaction">Search messic Services</string>
    <string name="searchMessicService_countdown_searching">searching</string>
    <string name="searchMessicService_countdown_seconds">sec</string>
    <string name="searchMessicService_results">Messic Services Found List</string>
    <string name="searchMessicService_manual">&#8230; or Manual Search</string>
    <string name="searchMessicService_empty">(empty)</string>
    <string name="searchMessicService_notavailable">This server is not available now!</string>

    <!-- MANUAL MESSIC SERVICE ACTIIVTY -->
    <string name="searchMessicServiceManual_explanation_title">Add messic service manually</string>
    <string name="searchMessicServiceManual_explanation">You can add manually an existing messic service. This is only recommended when your service is not running in your network but in the internet. Due to the impossibility to perform an automatically search over the whole internet of your service, you can describe here where is published your service.</string>
    <string name="searchMessicServiceManual_name">Name</string>
    <string name="searchMessicServiceManual_hostname">Hostname or IP</string>
    <string name="searchMessicServiceManual_port">Port</string>
    <string name="searchMessicServiceManual_secured">Secured</string>
    <string name="searchMessicServiceManual_description">Description</string>
    <string name="searchMessicServiceManual_save">Save</string>
    <string name="searchMessicServiceManual_cancel">Cancel</string>
    <string name="searchMessicServiceManual_mandatory">You must fill at least the name and the hostname/ip</string>

    <string name="title_section_random">Random Music</string>
    <string name="title_section_explore">Explore your music</string>
    <string name="title_section_playlist">Playlists available</string>
    <string name="title_section_downloaded">Downloaded Music</string>
    <string name="title_section_queue">Current Queue Playlist</string>
    <string name="title_section_search">Search Music Results</string>


    <string name="title_activity_base">messic</string>
    <string name="player_playing">Playing Now:</string>
    <string name="player_added">Added:</string>
    <string name="albuminfo_loading">Loading Album Info</string>
    <string name="albuminfo_wait">Please wait&#8230;</string>
    <string name="login_offline">&#8230; or play offline music</string>
    <string name="login_searchonline">Search an Online Messic Service</string>
    <string name="login_title">Login</string>
    <string name="login_message">Please wait &#8230;</string>
    <string name="download_added">downloading:</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_searchmusic_toast">Searching for</string>
    <string name="action_search_hint">Search &#8230;</string>
    <string name="action_remove_local_song">Are you sure to remove the song FROM THE LOCAL DEVICE?</string>
    <string name="action_remove_local_album">Are you sure to remove the whole album FROM THE LOCAL DEVICE? (this will not remove any remote songs)</string>
    <string name="action_removing_local_album_title">Removing Local Album</string>
    <string name="action_removing_local_album_content">Please wait</string>
    <string name="action_local_album_removed">Album removed locally:</string>
    <string name="action_empty_localdatabase">Are you sure to remove the WHOLE LOCAL database? (this will not remove any remote songs)</string>
    <string name="action_empty_localdatabase_reallysure">Are you REALLY SURE to remove WHOLE LOCAL database???? (this cannot be undone)</string>
    <string name="action_emptying_localdatabase_title">Cleaning local storage</string>
    <string name="action_emptying_localdatabase_content">Please wait</string>
    <string name="bignotification_player_cover_contentdescription">Cover</string>
    <string name="bignotification_player_back_contentdescription">Back</string>
    <string name="bignotification_player_next_contentdescription">Next</string>
    <string name="bignotification_player_play_contentdescription">Play</string>
    <string name="bignotification_player_pause_contentdescription">Pause</string>
    <string name="bignotification_player_close_contentdescription">Close</string>
    <string name="menu_album_download">Download Album</string>
    <string name="menu_album_remove">Remove Album</string>
    <string name="menu_album_add">Add this Album</string>
    <string name="menu_album_playnow">Play NOW this Album</string>
    <string name="menu_base_clearplaylist">Clear Playlist</string>
    <string name="menu_base_playrandom">Play Random</string>
    <string name="menu_base_removedatabase">Remove Local Database</string>
    <string name="menu_base_logout">Logout</string>
    <string name="menu_base_showlicense">See License</string>
    <string name="search_results_obtained">results obtained</string>
    <string name="search_searching">Searching&#8230; please wait</string>
    <string name="help_welcome_head">Welcome to messic app</string>
    <string name="help_welcome_content_html"><![CDATA[<p>Welcome to <b>messic</b>. This is the <b>first time</b> that you execute this app and the first thing you need to know is that this app need to connect to messic server in order to start working.  After that you can download from there music and store locally at your device to play it without connection with the server.  But, it is necessary to remark that at least you need a first connection with the messic server</p><p>The second important thing to know is that this app is <b>open source</b> and <b>free</b>.  In this case it means that it has been done with the effort of some crazy people that believe in those concepts.  But we need help. If you think that you can help us to improve this app or messic (the server part) by reporting issues, making translations, creating plugins, creating visual resources and so on, then you are more than welcome.  It is very difficult for us to maintain this app and the server.</p><p>Therefore, you are now ready to start using this app. <b>ENJOY IT!</b></p>]]></string>

</resources>