<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="events"
            type="org.messic.android.smartphone.activities.searchmessicservice.SearchMessicServiceActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:gravity="bottom"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="0dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchMessicService_explanation_title" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:padding="10dp">

            <TextView
                android:id="@+id/searchmessicservice_explanation"
                style="@style/messic_description_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchMessicService_explanation"
                android:textAppearance="?android:attr/textAppearance" />


            <LinearLayout
                android:id="@+id/searchmessicservice_buttons"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/searchmessicservice_explanation"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchmessicservice_bsearch"
                    style="@style/messic_button"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:layout_weight="0.2"
                    android:onClick="@{events.onSearchServiceClick}"
                    android:text="@string/searchMessicService_searchaction" />

                <Button
                    android:id="@+id/searchmessicservice_bmanual"
                    style="@style/messic_button"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.8"
                    android:onClick="@{events.onSearchServiceManualClick}"
                    android:text="..." />

            </LinearLayout>

            <TextView
                android:id="@+id/searchmessicservice_found_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/searchmessicservice_buttons"
                android:background="#EFEFEF"
                android:gravity="center"
                android:text="@string/searchMessicService_results"
                android:textColor="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@+id/searchmessicservice_found_list_title"
                android:background="#00FF00" />


            <w
                android:id="@+id/searchmessicservice_lvresults"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/searchmessicservice_offline"
                android:layout_below="@+id/searchmessicservice_found_list_title"
                android:scrollbars="vertical" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/searchmessicservice_offline"
                android:layout_below="@+id/searchmessicservice_found_list_title">

                <TextView
                    android:id="@+id/searchmessicservice_lempty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/searchMessicService_empty"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/searchmessicservice_offline"
                style="@style/messic_button"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:onClick="@{events.onPlayOfflineClick}"
                android:text="@string/login_offline" />

        </RelativeLayout>
    </RelativeLayout>
</layout>