<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="events"
            type="org.messic.android.activities.login.LoginActivity" />

        <variable
            name="user"
            type="org.messic.android.activities.login.LoginActivityBindingImpl" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:gravity="bottom"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="0dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_explanation_title" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:padding="10dp">

            <TextView
                android:id="@+id/login_offline_description"
                style="@style/messic_description_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_server_offline"
                android:textAppearance="?android:attr/textAppearance" />

            <RelativeLayout
                android:id="@+id/login_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_offline_description">

                <!--same id for shared transition -->
                <View
                    android:id="@+id/searchmessicservice_item_vstatus"
                    android:layout_width="10dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="#00FF00"
                    android:transitionName="status" />
                />

                <View
                    android:id="@+id/login_online_status"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/searchmessicservice_item_vstatus"
                    android:background="#FFFF00"
                    android:onClick="@{events.onStatusOnlineClick}"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/login_online_thostname_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/login_online_thostname"
                    android:layout_below="@+id/login_online_thostname"
                    android:text="@{user.serverIP}"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/login_online_thostname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/login_online_status"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/login_online_status"
                    android:text="@{user.serverName}"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="visible" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/login_online_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/login_status"
                android:layout_below="@+id/login_status"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_online_tusernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_online_tusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{user.usernameSync}"
                        android:hint="@string/login_loginhint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@{user.username}"

                        android:textColorLink="@android:color/holo_blue_dark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_online_tpasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_online_tpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{user.passwordSync}"
                        android:hint="@string/login_passwordhint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@{user.password}"

                        android:textColorLink="@android:color/holo_blue_dark" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/login_online_cbremember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:setOnCheckedChangeListener="@{user.rememberSync}"
                    android:text="@string/login_remember"
                    app:checked="@{user.remember}" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/login_online_bloginaction"
                    style="@style/messic_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{events.onLoginClick}"
                    android:text="@string/login_loginaction" />
            </LinearLayout>

            <Button
                android:id="@+id/login_searchonline_button"
                style="@style/messic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_online_layout"
                android:layout_below="@+id/login_online_layout"
                android:layout_marginTop="23dp"
                android:onClick="@{events.onSearchOnlineClick}"
                android:text="@string/login_searchonline"
                android:visibility="visible" />

            <Button
                android:id="@+id/login_boffline"
                style="@style/messic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_online_layout"
                android:layout_below="@+id/login_searchonline_button"
                android:layout_marginTop="23dp"
                android:onClick="@{events.onLoginOfflineClick}"
                android:text="@string/login_offline" />

        </RelativeLayout>

    </RelativeLayout>
</layout>